2009-02-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: metacity branched for 2.26.

2009-02-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: updated libcroco to
	0.6.2.

2009-02-05  Paolo Borelli  <pborelli@katamail.com>

	* modulesets/gnome-external-deps-2.26.modules:
	Bump libxml2 version to 2.7.3

2009-02-04  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: Downgrade cairo to
	version 1.8.4 (as 1.8.6 does not build with libtool 1.5)

2009-02-04  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: added gdm dependency on
	gnome-panel (for the new user switch applet).

2009-02-04  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/modtypes/linux.py: Fix a bug that prevented jhbuild
	calling make modules_install. Support doing make mrproper. Do
	make install by hand (to avoid colliding with custom distro
	Kbuild foo or installing to /boot). Install headers. Support
	'make defconfig' if moduleset doesnt specificy a kconfig.

2009-02-04  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.26.modules: Add quick-lounge-applet.

2009-02-04  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/modtypes/tarball.py: Forward tarball makeinstallargs on
	to autotools code.

2009-02-03  Claudio Saavedra  <csaavedra@igalia.com>

	* modulesets/gnome-external-deps-2.26.modules: Update cairo to
	version to 1.8.6

2009-02-03  Vincent Untz  <vuntz@gnome.org>

	* modulesets/gnome-suites-2.26.modules: remove libgnomeprintui dep of
	tomboy (see bug #512369).

2009-02-03  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.26.modules: glom: Now uses libgdamm trunk, not 
	libgdamm-3.0, and does not depend on libgnome.

2009-02-03  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.26.modules: updated telepathy-glib
	to latest released tarball.

2009-02-03  Frederic Peters  <fpeters@0d.be>
