@@ -1,5 +1,10 @@
 2009-02-05  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/tarball.py: warn about invalid file sizes, instead
+	of aborting with a Python trace.
+
+2009-02-05  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-suites-2.26.modules: metacity branched for 2.26.
 
 2009-02-05  Frederic Peters  <fpeters@0d.be>
